helm_chart/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: frontend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx   # Correctly placed here at the root level
  rules:
    - host: flask.sunilcloud.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
  tls:
    - hosts:
        - flask.sunilcloud.online
      secretName: my-tls-secret	#Reference to the Secret you created
